# unity-named-pipes

./: .gitignore  CMakeLists.txt  README.md  UnityNamedPipe.sln  appveyor.yml  build-library.ps1  build-library.sh  build-linux-library.sh  build-mac-library.sh  build-package.ps1  build.ps1  build.sh
NativeNamedPipe/: CMakeLists.txt  NativeNamedPipe.cpp  NativeNamedPipe.h  connection.h  connection_unix.cpp  connection_win.cpp
NativeNamedPipe.UnitTest/: NativeNamedPipe.UnitTest.sln  TestSettings.testsettings
NativeNamedPipe.UnitTest/NativeNamedPipe.UnitTest/: NativeNamedPipe.UnitTest.csproj  UnitTest1.cs
Unity Package/ProjectSettings/: ProjectSettings.asset
UnityNamedPipe/: Program.cs  UnityNamedPipe.csproj
UnityNamedPipe.Native/: CMakeLists.txt  NativeNamedPipe.cpp  NativeNamedPipe.h  connection_unix.cpp  connection_win.cpp  dllmain.cpp
UnityNamedPipe/IO/: NamedPipeClientStream.cs
UnityNamedPipes/: .gitignore
UnityNamedPipes/Assets/NamedPipeClient/IO/: NamedPipeClient.cs
UnityNamedPipes/Assets/NamedPipeClient/IO/Exceptions/: NamedPipeConnectionException.cs  NamedPipeOpenException.cs  NamedPipeReadException.cs  NamedPipeWriteException.cs
UnityNamedPipes/ProjectSettings/: ProjectSettings.asset
